kubernetes/media/newsnet/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
spec:
  rules:
    - host: sabnzbd.preprod.zevrant-services.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: sabnzbd
    - host: sonarr.preprod.zevrant-services.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: sonarr
    - host: radarr.preprod.zevrant-services.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: radarr
    - host: jellyfin.preprod.zevrant-services.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
    - host: jellyfin.preprod.zevrant-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: jellyfin
  ingressClassName: nginx
  tls:
    - secretName: sabnzbd-tls
      hosts:
        - sabnzbd.preprod.zevrant-services.internal
    - secretName: sonarr-tls
      hosts:
        - sonarr.preprod.zevrant-services.internal
    - secretName: radarr-tls
      hosts:
        - radarr.preprod.zevrant-services.internal
    - secretName: jellyfin-internal-tls
      hosts:
        - jellyfin.preprod.zevrant-services.internal
    - secretName: jellyfin-tls
      hosts:
        - jellyfin.preprod.zevrant-services.com

---


apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: sabnzbd
    - port: 8989
      targetPort: 8989
      name: sonarr
    - port: 7878
      targetPort: 7878
      name: radarr
    - port: 8096
      targetPort: 8096
      name: jellyfin
  selector:
    app: sabnzbd
